# footron-the-network

./: .gitignore  alignment.json  bboxes.json  setup.cfg
controls/: .eslintrc.js  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
controls/lib/: index.tsx
proto/: network.proto
thenetwork/: data.py  positioning.py  server.py
thenetwork/proto/: network_pb2.py  network_pb2_grpc.py
