[metadata]
name = thenetwork
version = 0.1
url = https://github.com/BYU-PCCL/footron-the-network
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    footron-messaging @ git+https://github.com/BYU-PCCL/footron-messaging-python.git
    pydantic
    humiolib
    pyshp
    tqdm
    grpcio
